Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Nữ tiến sĩ tốt nghiệp ở Úc làm hiệu trưởng trường chuyên top đầu TPHCM",
+    "content": "Bà Bùi Thị Hồng Hạnh, tiến sĩ tốt nghiệp tại Đại học Griffith, Australia, đã được bổ nhiệm làm hiệu trưởng Trường Phổ thông Năng khiếu tại TPHCM từ ngày 1/4. Bà có hơn 20 năm kinh nghiệm trong lĩnh vực giáo dục và từng giữ nhiều vị trí quan trọng trong các cơ sở giáo dục đại học. Với chuyên môn sâu về công nghệ sinh học, bà đã tham gia giảng dạy và nghiên cứu tại nhiều trường đại học.",
+    "link": "https://dantri.com.vn/giao-duc/nu-tien-si-tot-nghiep-o-uc-lam-hieu-truong-truong-chuyen-top-dau-tphcm-20250319224614347.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ai là hiệu trưởng mới của Trường Phổ thông Năng khiếu tại TPHCM?",
+    "answers": [
+      {
+        "text": "Bà Bùi Thị Hồng Hạnh",
+        "correct": true
+      },
+      {
+        "text": "Giáo sư Nguyễn Thị Thanh Mai",
+        "correct": false
+      },
+      {
+        "text": "Ông Phan Bách Thắng",
+        "correct": false
+      },
+      {
+        "text": "Bà Nguyễn Thị Lan",
+        "correct": false
+      },
+      {
+        "text": "Ông Văn Chí Nam",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những dịch vụ thay đổi theo lối sống 'cú đêm' của Gen Z",
     "content": "Nhu cầu sinh hoạt muộn của Gen Z đã dẫn đến sự gia tăng của các dịch vụ mở xuyên đêm tại Hà Nội, như quán cà phê, nhà hàng và các điểm vui chơi. Nhiều quán đã điều chỉnh thời gian phục vụ để đáp ứng nhu cầu của giới trẻ, với các hoạt động như học tập, vui chơi và ăn uống diễn ra từ chiều đến khuya. Khảo sát cho thấy số lượng người trẻ đi ngủ sau 23h ngày càng nhiều, cho thấy sự thay đổi trong lối sống và thói quen sinh hoạt của họ.",
     "link": "https://vnexpress.net/nhung-dich-vu-thay-doi-theo-loi-song-cu-dem-cua-gen-z-4862469.html",
@@ -291,33 +322,6 @@
     ]
   },
   {
-    "title": "Phân khúc CUV cỡ C - Territory và CX-5 bỏ xa phần còn lại",
-    "content": "Trong phân khúc CUV cỡ C, Mazda CX-5 và Ford Territory đang chiếm ưu thế vượt trội với tổng doanh số gần 60% thị phần. Trong hai tháng đầu năm 2025, CX-5 vẫn dẫn đầu với 923 xe bán ra, trong khi Territory theo sau nhưng vẫn còn khoảng cách lớn. Các đối thủ như Honda CR-V, Hyundai Tucson và Kia Sportage ghi nhận doanh số thấp hơn nhiều, cho thấy sự thống trị của CX-5 và Territory.",
-    "link": "https://vnexpress.net/phan-khuc-cuv-co-c-territory-va-cx-5-bo-xa-phan-con-lai-4863304.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao CX-5 và Territory lại chiếm ưu thế trong phân khúc CUV cỡ C?",
-    "answers": [
-      {
-        "text": "CX-5 và Territory có doanh số cao và thị phần lớn.",
-        "correct": true
-      },
-      {
-        "text": "Các đối thủ đều có doanh số tốt hơn.",
-        "correct": false
-      },
-      {
-        "text": "CX-5 không còn sản xuất nữa.",
-        "correct": false
-      },
-      {
-        "text": "Territory là mẫu xe mới nhất trên thị trường.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Học ngành nào để 4-5 năm nữa vẫn có việc làm?",
     "content": "Bài viết đề cập đến nỗi lo lắng của học sinh và phụ huynh về việc chọn ngành học trong bối cảnh công nghệ AI đang phát triển mạnh mẽ. Nhiều ngành như tài chính, ngân hàng và truyền thông đối mặt với nguy cơ bị thay thế bởi AI, khiến các em lo ngại về cơ hội việc làm trong tương lai. Tuy nhiên, các chuyên gia khẳng định rằng công nghệ sẽ không hoàn toàn thay thế con người mà còn tạo ra nhiều cơ hội mới, và người học cần không ngừng cải thiện kỹ năng để thích ứng với thị trường lao động.",
     "link": "https://dantri.com.vn/giao-duc/hoc-nganh-nao-de-4-5-nam-nua-van-co-viec-lam-20250319213313023.htm",
@@ -344,6 +348,33 @@
       },
       {
         "text": "Y tế và công nghệ sinh học",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phân khúc CUV cỡ C - Territory và CX-5 bỏ xa phần còn lại",
+    "content": "Trong phân khúc CUV cỡ C, Mazda CX-5 và Ford Territory đang chiếm ưu thế vượt trội với tổng doanh số gần 60% thị phần. Trong hai tháng đầu năm 2025, CX-5 vẫn dẫn đầu với 923 xe bán ra, trong khi Territory theo sau nhưng vẫn còn khoảng cách lớn. Các đối thủ như Honda CR-V, Hyundai Tucson và Kia Sportage ghi nhận doanh số thấp hơn nhiều, cho thấy sự thống trị của CX-5 và Territory.",
+    "link": "https://vnexpress.net/phan-khuc-cuv-co-c-territory-va-cx-5-bo-xa-phan-con-lai-4863304.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao CX-5 và Territory lại chiếm ưu thế trong phân khúc CUV cỡ C?",
+    "answers": [
+      {
+        "text": "CX-5 và Territory có doanh số cao và thị phần lớn.",
+        "correct": true
+      },
+      {
+        "text": "Các đối thủ đều có doanh số tốt hơn.",
+        "correct": false
+      },
+      {
+        "text": "CX-5 không còn sản xuất nữa.",
+        "correct": false
+      },
+      {
+        "text": "Territory là mẫu xe mới nhất trên thị trường.",
         "correct": false
       }
     ]
@@ -577,33 +608,6 @@
     ]
   },
   {
-    "title": "5 người thoát chết khi ôtô lao xuống sông vì theo Google Maps",
-    "content": "Một gia đình gồm 5 người đã thoát chết khi chiếc ôtô của họ lao xuống sông Gayathripuzha, Ấn Độ, do tuân theo hướng dẫn của Google Maps. Sự việc xảy ra vào lúc 19h30 ngày 16/3 khi họ đang trở về từ chuyến đi mua sắm. Mặc dù ôtô chìm hơn một nửa dưới nước, nhưng may mắn là tất cả các thành viên trong gia đình đều không bị thương. Tai nạn này đã làm dấy lên lo ngại về độ tin cậy của các ứng dụng định vị trong việc chỉ đường, đặc biệt ở những khu vực hạ tầng giao thông kém phát triển.",
-    "link": "https://vnexpress.net/5-nguoi-thoat-chet-khi-oto-lao-xuong-song-vi-theo-google-maps-4863161.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tai nạn ôtô lao xuống sông xảy ra ở đâu?",
-    "answers": [
-      {
-        "text": "sông Gayathripuzha, Ấn Độ",
-        "correct": true
-      },
-      {
-        "text": "sông Hàn, Đà Nẵng",
-        "correct": false
-      },
-      {
-        "text": "sông Thames, Anh",
-        "correct": false
-      },
-      {
-        "text": "sông Mekong, Việt Nam",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Một ngày luyện trình diễn tiêm kích Su-30MK2",
     "content": "Vào sáng 18/3, tại sân bay Biên Hoà, Đồng Nai, các phi công đã thực hiện buổi huấn luyện trình diễn cho tiêm kích Su-30MK2, chuẩn bị cho sự kiện vào ngày 30/4. Trong buổi tập, các phi công phải thực hiện các động tác bay phức tạp và kiểm tra kỹ lưỡng các thiết bị trước khi cất cánh. Su-30MK2 là máy bay chiến đấu hiện đại nhất của quân đội Việt Nam, được trang bị nhiều loại vũ khí và có khả năng bay với tốc độ cao. Buổi tập này là một phần trong kế hoạch chuẩn bị cho màn trình diễn lớn vào dịp lễ sắp tới.",
     "link": "https://vnexpress.net/mot-ngay-luyen-trinh-dien-tiem-kich-su-30mk2-4863011.html",
@@ -626,6 +630,33 @@
       },
       {
         "text": "Để tham dự một cuộc thi quốc tế",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 người thoát chết khi ôtô lao xuống sông vì theo Google Maps",
+    "content": "Một gia đình gồm 5 người đã thoát chết khi chiếc ôtô của họ lao xuống sông Gayathripuzha, Ấn Độ, do tuân theo hướng dẫn của Google Maps. Sự việc xảy ra vào lúc 19h30 ngày 16/3 khi họ đang trở về từ chuyến đi mua sắm. Mặc dù ôtô chìm hơn một nửa dưới nước, nhưng may mắn là tất cả các thành viên trong gia đình đều không bị thương. Tai nạn này đã làm dấy lên lo ngại về độ tin cậy của các ứng dụng định vị trong việc chỉ đường, đặc biệt ở những khu vực hạ tầng giao thông kém phát triển.",
+    "link": "https://vnexpress.net/5-nguoi-thoat-chet-khi-oto-lao-xuong-song-vi-theo-google-maps-4863161.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tai nạn ôtô lao xuống sông xảy ra ở đâu?",
+    "answers": [
+      {
+        "text": "sông Gayathripuzha, Ấn Độ",
+        "correct": true
+      },
+      {
+        "text": "sông Hàn, Đà Nẵng",
+        "correct": false
+      },
+      {
+        "text": "sông Thames, Anh",
+        "correct": false
+      },
+      {
+        "text": "sông Mekong, Việt Nam",
         "correct": false
       }
     ]
@@ -1663,32 +1694,28 @@
     ]
   },
   {
-    "title": "5 đồ uống góp phần tăng cường sinh lý nữ",
-    "content": "Bài viết giới thiệu 5 loại đồ uống có lợi giúp tăng cường sinh lý nữ, bao gồm trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ và nước ép lựu. Những đồ uống này chứa nhiều chất chống oxy hóa và vitamin, hỗ trợ cải thiện sức khỏe sinh lý và ổn định nội tiết tố. Bên cạnh việc sử dụng các loại đồ uống này, lối sống lành mạnh như tập thể dục và chế độ ăn uống cân bằng cũng rất quan trọng để nâng cao sức khỏe tổng thể của phụ nữ.",
-    "link": "https://vnexpress.net/5-do-uong-gop-phan-tang-cuong-sinh-ly-nu-4863206.html",
+    "title": "6 mẹo giúp bỏ thuốc lá",
+    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
+    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại đồ uống nào có thể giúp tăng cường sinh lý nữ?",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
     "answers": [
       {
-        "text": "Trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ, nước ép lựu",
+        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
         "correct": true
       },
       {
-        "text": "Nước ngọt có ga",
+        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
         "correct": false
       },
       {
-        "text": "Trà sữa",
+        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
         "correct": false
       },
       {
-        "text": "Sữa đặc có đường",
-        "correct": false
-      },
-      {
-        "text": "Nước lọc",
+        "text": "Không cần phải có sự hỗ trợ từ người khác.",
         "correct": false
       }
     ]
@@ -1721,28 +1748,32 @@
     ]
   },
   {
-    "title": "6 mẹo giúp bỏ thuốc lá",
-    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
-    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
+    "title": "5 đồ uống góp phần tăng cường sinh lý nữ",
+    "content": "Bài viết giới thiệu 5 loại đồ uống có lợi giúp tăng cường sinh lý nữ, bao gồm trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ và nước ép lựu. Những đồ uống này chứa nhiều chất chống oxy hóa và vitamin, hỗ trợ cải thiện sức khỏe sinh lý và ổn định nội tiết tố. Bên cạnh việc sử dụng các loại đồ uống này, lối sống lành mạnh như tập thể dục và chế độ ăn uống cân bằng cũng rất quan trọng để nâng cao sức khỏe tổng thể của phụ nữ.",
+    "link": "https://vnexpress.net/5-do-uong-gop-phan-tang-cuong-sinh-ly-nu-4863206.html",
     "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại đồ uống nào có thể giúp tăng cường sinh lý nữ?",
     "answers": [
       {
-        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
+        "text": "Trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ, nước ép lựu",
         "correct": true
       },
       {
-        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
+        "text": "Nước ngọt có ga",
         "correct": false
       },
       {
-        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
+        "text": "Trà sữa",
         "correct": false
       },
       {
-        "text": "Không cần phải có sự hỗ trợ từ người khác.",
+        "text": "Sữa đặc có đường",
+        "correct": false
+      },
+      {
+        "text": "Nước lọc",
         "correct": false
       }
     ]
@@ -2177,33 +2208,6 @@
     ]
   },
   {
-    "title": "5 món ăn thường xuyên có thể phòng bệnh tim",
-    "content": "Bài viết đề cập đến 5 món ăn có thể giúp phòng ngừa bệnh tim, bao gồm dầu ôliu, chocolate đen, cà chua, hạt và tỏi. Dầu ôliu chứa chất béo không bão hòa đơn và polyphenol có tác dụng giảm viêm và cholesterol. Chocolate đen với hàm lượng ca cao cao có flavonoid giúp cải thiện lưu lượng máu và giảm huyết áp. Các loại hạt và cà chua cũng giàu chất dinh dưỡng hỗ trợ sức khỏe tim mạch. Tỏi với allicin có khả năng bảo vệ tim và ngăn ngừa cục máu đông.",
-    "link": "https://vnexpress.net/5-mon-an-thuong-xuyen-co-the-phong-benh-tim-4863283.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nào có thể giúp phòng ngừa bệnh tim?",
-    "answers": [
-      {
-        "text": "Dầu ôliu, chocolate đen, cà chua, hạt, tỏi",
-        "correct": true
-      },
-      {
-        "text": "Thịt đỏ, thực phẩm chiên, bánh ngọt, đồ uống có ga",
-        "correct": false
-      },
-      {
-        "text": "Cá hồi, rau xanh, sữa chua, nước trái cây",
-        "correct": false
-      },
-      {
-        "text": "Mì gói, snack, kem, đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "42 tuổi mới phát hiện có hai tử cung",
     "content": "Chị Hạnh, 42 tuổi, đã phát hiện mình có hai tử cung và hai âm đạo sau khi đi khám do chu kỳ kinh kéo dài 14 ngày. Tình trạng này khá hiếm gặp, chỉ chiếm 5% các dị tật tử cung và thường không được phát hiện nếu không có kiểm tra y tế. Sau khi phát hiện, bác sĩ đã phẫu thuật cắt bỏ một tử cung chứa khối u xơ lớn để cải thiện sức khỏe cho chị. Mặc dù có hai tử cung, chị Hạnh vẫn có khả năng mang thai và có kinh nguyệt bình thường.",
     "link": "https://vnexpress.net/42-tuoi-moi-phat-hien-co-hai-tu-cung-4862862.html",
@@ -2230,6 +2234,33 @@
       },
       {
         "text": "Có dấu hiệu mang thai",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn thường xuyên có thể phòng bệnh tim",
+    "content": "Bài viết đề cập đến 5 món ăn có thể giúp phòng ngừa bệnh tim, bao gồm dầu ôliu, chocolate đen, cà chua, hạt và tỏi. Dầu ôliu chứa chất béo không bão hòa đơn và polyphenol có tác dụng giảm viêm và cholesterol. Chocolate đen với hàm lượng ca cao cao có flavonoid giúp cải thiện lưu lượng máu và giảm huyết áp. Các loại hạt và cà chua cũng giàu chất dinh dưỡng hỗ trợ sức khỏe tim mạch. Tỏi với allicin có khả năng bảo vệ tim và ngăn ngừa cục máu đông.",
+    "link": "https://vnexpress.net/5-mon-an-thuong-xuyen-co-the-phong-benh-tim-4863283.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nào có thể giúp phòng ngừa bệnh tim?",
+    "answers": [
+      {
+        "text": "Dầu ôliu, chocolate đen, cà chua, hạt, tỏi",
+        "correct": true
+      },
+      {
+        "text": "Thịt đỏ, thực phẩm chiên, bánh ngọt, đồ uống có ga",
+        "correct": false
+      },
+      {
+        "text": "Cá hồi, rau xanh, sữa chua, nước trái cây",
+        "correct": false
+      },
+      {
+        "text": "Mì gói, snack, kem, đồ ăn nhanh",
         "correct": false
       }
     ]
