--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Thu nhập gia đình 35-40 triệu có nên mua xe?",
+    "content": "Gia đình có thu nhập từ 35-40 triệu đồng mỗi tháng đang cân nhắc việc mua xe trong khi chưa sở hữu nhà ở Hà Nội. Họ hiện có khoảng 400 triệu tiền mặt và 2 cây vàng, và đang sống thuê chung cư với chi phí 7 triệu đồng mỗi tháng. Với việc công ty hỗ trợ một phần chi phí đi lại, việc mua xe có thể phục vụ cho công việc và nhu cầu di chuyển của gia đình. Tuy nhiên, câu hỏi đặt ra là liệu việc mua xe có cần thiết khi chưa có nhà ở Hà Nội hay không.",
+    "link": "https://vnexpress.net/thu-nhap-gia-dinh-35-40-trieu-co-nen-mua-xe-4863509.html",
+    "cat": "gia-dinh",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Gia đình nên mua xe khi chưa có nhà ở Hà Nội không?",
+    "answers": [
+      {
+        "text": "Nên mua xe để phục vụ công việc và nhu cầu đi lại.",
+        "correct": true
+      },
+      {
+        "text": "Không nên mua xe vì chưa có nhà.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên mua xe nếu có đủ tiền mặt.",
+        "correct": false
+      },
+      {
+        "text": "Mua xe là không cần thiết trong tình hình hiện tại.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nữ tiến sĩ tốt nghiệp ở Úc làm hiệu trưởng trường chuyên top đầu TPHCM",
     "content": "Bà Bùi Thị Hồng Hạnh, tiến sĩ tốt nghiệp tại Đại học Griffith, Australia, đã được bổ nhiệm làm hiệu trưởng Trường Phổ thông Năng khiếu tại TPHCM từ ngày 1/4. Bà có hơn 20 năm kinh nghiệm trong lĩnh vực giáo dục và từng giữ nhiều vị trí quan trọng trong các cơ sở giáo dục đại học. Với chuyên môn sâu về công nghệ sinh học, bà đã tham gia giảng dạy và nghiên cứu tại nhiều trường đại học.",
     "link": "https://dantri.com.vn/giao-duc/nu-tien-si-tot-nghiep-o-uc-lam-hieu-truong-truong-chuyen-top-dau-tphcm-20250319224614347.htm",
@@ -236,33 +263,6 @@
       },
       {
         "text": "KSI",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mất cơ hội chữa khỏi ung thư vì khám sai nơi",
-    "content": "Ông Thành, 63 tuổi, phát hiện ung thư tuyến tiền liệt giai đoạn muộn do không được tư vấn đúng khi xét nghiệm PSA cao nhưng không được kiểm tra thêm. Mặc dù đã phẫu thuật cắt tuyến tiền liệt, ông phải đối mặt với ung thư tái phát và lựa chọn giữa cắt bỏ tinh hoàn hoặc dùng liệu pháp nội tiết tố tốn kém và có nhiều tác dụng phụ. Nếu được phát hiện sớm, tỷ lệ chữa khỏi ung thư tuyến tiền liệt có thể lên tới 100%, nhưng hiện tại, khoảng 75-80% bệnh nhân đến khám khi đã ở giai đoạn muộn.",
-    "link": "https://vnexpress.net/mat-co-hoi-chua-khoi-ung-thu-vi-kham-sai-noi-4861903.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao ông Thành mất cơ hội chữa khỏi ung thư tuyến tiền liệt?",
-    "answers": [
-      {
-        "text": "Vì không được xét nghiệm PSA khi có chỉ số cao.",
-        "correct": true
-      },
-      {
-        "text": "Vì ông không có triệu chứng rõ ràng.",
-        "correct": false
-      },
-      {
-        "text": "Vì bệnh viện không đủ trang thiết bị.",
-        "correct": false
-      },
-      {
-        "text": "Vì ông không đi khám định kỳ.",
         "correct": false
       }
     ]
@@ -375,6 +375,33 @@
       },
       {
         "text": "Territory là mẫu xe mới nhất trên thị trường.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mất cơ hội chữa khỏi ung thư vì khám sai nơi",
+    "content": "Ông Thành, 63 tuổi, phát hiện ung thư tuyến tiền liệt giai đoạn muộn do không được tư vấn đúng khi xét nghiệm PSA cao nhưng không được kiểm tra thêm. Mặc dù đã phẫu thuật cắt tuyến tiền liệt, ông phải đối mặt với ung thư tái phát và lựa chọn giữa cắt bỏ tinh hoàn hoặc dùng liệu pháp nội tiết tố tốn kém và có nhiều tác dụng phụ. Nếu được phát hiện sớm, tỷ lệ chữa khỏi ung thư tuyến tiền liệt có thể lên tới 100%, nhưng hiện tại, khoảng 75-80% bệnh nhân đến khám khi đã ở giai đoạn muộn.",
+    "link": "https://vnexpress.net/mat-co-hoi-chua-khoi-ung-thu-vi-kham-sai-noi-4861903.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao ông Thành mất cơ hội chữa khỏi ung thư tuyến tiền liệt?",
+    "answers": [
+      {
+        "text": "Vì không được xét nghiệm PSA khi có chỉ số cao.",
+        "correct": true
+      },
+      {
+        "text": "Vì ông không có triệu chứng rõ ràng.",
+        "correct": false
+      },
+      {
+        "text": "Vì bệnh viện không đủ trang thiết bị.",
+        "correct": false
+      },
+      {
+        "text": "Vì ông không đi khám định kỳ.",
         "correct": false
       }
     ]
@@ -1694,55 +1721,28 @@
     ]
   },
   {
-    "title": "6 mẹo giúp bỏ thuốc lá",
-    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
-    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
+    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
+    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
+    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
     "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
-    "answers": [
-      {
-        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
-        "correct": false
-      },
-      {
-        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
-        "correct": false
-      },
-      {
-        "text": "Không cần phải có sự hỗ trợ từ người khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "GAC tung ưu đãi ba dòng xe trong tháng 3",
-    "content": "GAC Motor Việt Nam vừa công bố chương trình ưu đãi cho ba dòng xe gồm M6 Pro, M8 và GS8 trong tháng 3. Khách hàng mua M6 Pro sẽ nhận 7 năm bảo hành, miễn phí dịch vụ cứu hộ 24/7 và thêm đồng hồ thông minh cho phiên bản 1.5T GL. M8 cũng có các ưu đãi tương tự, với quà tặng tiền mặt cho bản GL Master, trong khi GS8 được miễn lệ phí trước bạ và hưởng chính sách bảo hành như trên.",
-    "link": "https://vnexpress.net/gac-tung-uu-dai-ba-dong-xe-trong-thang-3-4863400.html",
-    "cat": "oto-xe-may",
     "positivity": 8,
     "importance": 7,
-    "question": "GAC Motor có những ưu đãi gì cho ba dòng xe trong tháng 3?",
+    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
     "answers": [
       {
-        "text": "Chương trình ưu đãi cho M6 Pro, M8 và GS8 với bảo hành 7 năm.",
+        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
         "correct": true
       },
       {
-        "text": "Chỉ có ưu đãi cho dòng xe M6 Pro.",
+        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
         "correct": false
       },
       {
-        "text": "Chương trình khuyến mãi chỉ áp dụng cho xe GS8.",
+        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
         "correct": false
       },
       {
-        "text": "Không có thông tin nào về ưu đãi cho xe GAC.",
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
         "correct": false
       }
     ]
@@ -1779,59 +1779,28 @@
     ]
   },
   {
-    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
-    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
+    "title": "6 mẹo giúp bỏ thuốc lá",
+    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
+    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
     "cat": "suc-khoe",
-    "positivity": 6,
+    "positivity": 9,
     "importance": 8,
-    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
     "answers": [
       {
-        "text": "Khó thở và ho khan kéo dài",
+        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
         "correct": true
       },
       {
-        "text": "Đau đầu và chóng mặt",
+        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
         "correct": false
       },
       {
-        "text": "Nôn mửa và tiêu chảy",
+        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
         "correct": false
       },
       {
-        "text": "Mệt mỏi và sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Đau bụng và khó tiêu",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
-    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
-    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
-    "answers": [
-      {
-        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
-        "correct": true
-      },
-      {
-        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
-        "correct": false
-      },
-      {
-        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
-        "correct": false
-      },
-      {
-        "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "text": "Không cần phải có sự hỗ trợ từ người khác.",
         "correct": false
       }
     ]
@@ -1859,6 +1828,64 @@
       },
       {
         "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "GAC tung ưu đãi ba dòng xe trong tháng 3",
+    "content": "GAC Motor Việt Nam vừa công bố chương trình ưu đãi cho ba dòng xe gồm M6 Pro, M8 và GS8 trong tháng 3. Khách hàng mua M6 Pro sẽ nhận 7 năm bảo hành, miễn phí dịch vụ cứu hộ 24/7 và thêm đồng hồ thông minh cho phiên bản 1.5T GL. M8 cũng có các ưu đãi tương tự, với quà tặng tiền mặt cho bản GL Master, trong khi GS8 được miễn lệ phí trước bạ và hưởng chính sách bảo hành như trên.",
+    "link": "https://vnexpress.net/gac-tung-uu-dai-ba-dong-xe-trong-thang-3-4863400.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "GAC Motor có những ưu đãi gì cho ba dòng xe trong tháng 3?",
+    "answers": [
+      {
+        "text": "Chương trình ưu đãi cho M6 Pro, M8 và GS8 với bảo hành 7 năm.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có ưu đãi cho dòng xe M6 Pro.",
+        "correct": false
+      },
+      {
+        "text": "Chương trình khuyến mãi chỉ áp dụng cho xe GS8.",
+        "correct": false
+      },
+      {
+        "text": "Không có thông tin nào về ưu đãi cho xe GAC.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
+    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "answers": [
+      {
+        "text": "Khó thở và ho khan kéo dài",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu và chóng mặt",
+        "correct": false
+      },
+      {
+        "text": "Nôn mửa và tiêu chảy",
+        "correct": false
+      },
+      {
+        "text": "Mệt mỏi và sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng và khó tiêu",
         "correct": false
       }
     ]
