Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Cách Hoa hậu Ngọc Hân kể chuyện văn hóa với thế giới",
+    "content": "Hoa hậu Ngọc Hân đã chia sẻ về hành trình quảng bá văn hóa Việt Nam, đặc biệt thông qua tà áo dài trong các sự kiện quốc tế. Cô nhấn mạnh rằng văn hóa là 'chiếc cầu nối mềm mại' giữa các quốc gia và đã có nhiều hoạt động để đưa áo dài ra thế giới. Gần đây, trong chuyến đi đến Venezuela, Ngọc Hân đã khéo léo kết hợp văn hóa của hai nước, nhận được sự yêu mến và khen ngợi từ quan chức địa phương. Ngoài ra, gia đình cũng đóng vai trò quan trọng trong việc hỗ trợ cô trong sứ mệnh này.",
+    "link": "https://dantri.com.vn/giai-tri/cach-hoa-hau-ngoc-han-ke-chuyen-van-hoa-voi-the-gioi-20250319232919142.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Hoa hậu Ngọc Hân đã làm gì để quảng bá văn hóa Việt Nam ra thế giới?",
+    "answers": [
+      {
+        "text": "Quảng bá tà áo dài Việt Nam",
+        "correct": true
+      },
+      {
+        "text": "Tổ chức một cuộc thi sắc đẹp",
+        "correct": false
+      },
+      {
+        "text": "Đăng quang Hoa hậu Thế giới",
+        "correct": false
+      },
+      {
+        "text": "Tham gia một bộ phim truyền hình",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thu nhập gia đình 35-40 triệu có nên mua xe?",
     "content": "Gia đình có thu nhập từ 35-40 triệu đồng mỗi tháng đang cân nhắc việc mua xe trong khi chưa sở hữu nhà ở Hà Nội. Họ hiện có khoảng 400 triệu tiền mặt và 2 cây vàng, và đang sống thuê chung cư với chi phí 7 triệu đồng mỗi tháng. Với việc công ty hỗ trợ một phần chi phí đi lại, việc mua xe có thể phục vụ cho công việc và nhu cầu di chuyển của gia đình. Tuy nhiên, câu hỏi đặt ra là liệu việc mua xe có cần thiết khi chưa có nhà ở Hà Nội hay không.",
     "link": "https://vnexpress.net/thu-nhap-gia-dinh-35-40-trieu-co-nen-mua-xe-4863509.html",
@@ -268,33 +295,6 @@
     ]
   },
   {
-    "title": "Hai con của Từ Hy Viên vắng mặt trong tang lễ của mẹ",
-    "content": "Nữ diễn viên Từ Hy Viên đã qua đời và được an táng tại Nghĩa trang Kim Bảo Sơn ở Đài Loan. Tang lễ của cô diễn ra với sự tham gia của chồng hiện tại và gia đình, nhưng hai con của nữ diễn viên không có mặt. Mẹ kế của các con cho biết không nhận được thông báo về tang lễ, dẫn đến việc hai bé không thể tiễn đưa mẹ. Tình trạng này đã gây ra nhiều tranh cãi trên mạng xã hội.",
-    "link": "https://dantri.com.vn/giai-tri/hai-con-cua-tu-hy-vien-vang-mat-trong-tang-le-cua-me-20250319172644395.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao hai con của Từ Hy Viên không tham dự tang lễ của mẹ?",
-    "answers": [
-      {
-        "text": "Vì không nhận được thông báo về tang lễ.",
-        "correct": true
-      },
-      {
-        "text": "Vì các con đang ở Đài Loan.",
-        "correct": false
-      },
-      {
-        "text": "Vì các con không muốn đi.",
-        "correct": false
-      },
-      {
-        "text": "Vì các con đang ở với ông bà.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xu hướng 'nghỉ việc trả thù' của Gen Z Mỹ",
     "content": "Nhiều nhân viên Gen Z tại Mỹ đang theo xu hướng 'nghỉ việc trả thù', tức là họ cố tình xin nghỉ việc vào những thời điểm bận rộn nhất của công ty để gây rối loạn cho doanh nghiệp. Các nhân viên này thường nghỉ việc mà không thông báo trước, phản ánh sự bất mãn với cách quản lý và điều kiện làm việc. Theo khảo sát, 65% nhân viên cảm thấy mất động lực trong công việc, trong khi 83% Gen Z đang phải đối mặt với tình trạng kiệt sức, dẫn đến việc nghỉ việc như một cách phản kháng. Các chuyên gia khuyên rằng thay vì bỏ việc một cách bốc đồng, nhân viên nên tìm cách giao tiếp cởi mở với cấp trên.",
     "link": "https://vnexpress.net/xu-huong-nghi-viec-tra-thu-cua-gen-z-my-4863307.html",
@@ -402,6 +402,33 @@
       },
       {
         "text": "Vì ông không đi khám định kỳ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hai con của Từ Hy Viên vắng mặt trong tang lễ của mẹ",
+    "content": "Nữ diễn viên Từ Hy Viên đã qua đời và được an táng tại Nghĩa trang Kim Bảo Sơn ở Đài Loan. Tang lễ của cô diễn ra với sự tham gia của chồng hiện tại và gia đình, nhưng hai con của nữ diễn viên không có mặt. Mẹ kế của các con cho biết không nhận được thông báo về tang lễ, dẫn đến việc hai bé không thể tiễn đưa mẹ. Tình trạng này đã gây ra nhiều tranh cãi trên mạng xã hội.",
+    "link": "https://dantri.com.vn/giai-tri/hai-con-cua-tu-hy-vien-vang-mat-trong-tang-le-cua-me-20250319172644395.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao hai con của Từ Hy Viên không tham dự tang lễ của mẹ?",
+    "answers": [
+      {
+        "text": "Vì không nhận được thông báo về tang lễ.",
+        "correct": true
+      },
+      {
+        "text": "Vì các con đang ở Đài Loan.",
+        "correct": false
+      },
+      {
+        "text": "Vì các con không muốn đi.",
+        "correct": false
+      },
+      {
+        "text": "Vì các con đang ở với ông bà.",
         "correct": false
       }
     ]
