Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Tân Sơn Nhất thí điểm chuyến bay đi, đến nhà ga mới",
+    "content": "Tân Sơn Nhất sẽ chính thức thí điểm nhà ga T3 từ tháng 4-2025 với tổng mức đầu tư 11.000 tỉ đồng. Các chuyến bay đầu tiên từ Tân Sơn Nhất đi Vân Đồn sẽ diễn ra vào ngày 24-4, và đường bay TP.HCM - Hà Nội sẽ tham gia thử nghiệm vào ngày 28-4. Các hãng hàng không sẽ thông báo cho hành khách về việc chuyển đổi nhà ga nhằm giảm thiểu nhầm lẫn giữa các chuyến bay. Nhà ga T3 dự kiến sẽ giảm tải cho nhà ga T1 hiện đang quá tải.",
+    "link": "https://tuoitre.vn/tan-son-nhat-thi-diem-chuyen-bay-di-den-nha-ga-moi-20250319232915747.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Khi nào nhà ga T3 tại sân bay Tân Sơn Nhất sẽ đi vào hoạt động thí điểm?",
+    "answers": [
+      {
+        "text": "Tháng 4-2025",
+        "correct": true
+      },
+      {
+        "text": "Tháng 5-2025",
+        "correct": false
+      },
+      {
+        "text": "Tháng 6-2025",
+        "correct": false
+      },
+      {
+        "text": "Tháng 3-2025",
+        "correct": false
+      },
+      {
+        "text": "Tháng 7-2025",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phụ cấp công vụ 25% của công chức được tính ra sao?",
     "content": "Khoản phụ cấp công vụ 25% của công chức sẽ được tính trong \"mức lương hiện hưởng\" theo quy định tại Nghị định 178/2024. Theo luật sư Nguyễn Hồng Linh, mức lương hiện hưởng bao gồm tiền lương theo ngạch, bậc và các khoản phụ cấp, trong đó có phụ cấp công vụ. Vì vậy, phụ cấp công vụ 25% sẽ được cộng vào mức lương này.",
     "link": "https://tuoitre.vn/phu-cap-cong-vu-25-cua-cong-chuc-duoc-tinh-ra-sao-20250313135953325.htm",
@@ -2125,82 +2156,32 @@
     ]
   },
   {
-    "title": "6 mẹo giúp bỏ thuốc lá",
-    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
-    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
+    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
+    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
     "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
-    "answers": [
-      {
-        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
-        "correct": false
-      },
-      {
-        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
-        "correct": false
-      },
-      {
-        "text": "Không cần phải có sự hỗ trợ từ người khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "GAC tung ưu đãi ba dòng xe trong tháng 3",
-    "content": "GAC Motor Việt Nam vừa công bố chương trình ưu đãi cho ba dòng xe gồm M6 Pro, M8 và GS8 trong tháng 3. Khách hàng mua M6 Pro sẽ nhận 7 năm bảo hành, miễn phí dịch vụ cứu hộ 24/7 và thêm đồng hồ thông minh cho phiên bản 1.5T GL. M8 cũng có các ưu đãi tương tự, với quà tặng tiền mặt cho bản GL Master, trong khi GS8 được miễn lệ phí trước bạ và hưởng chính sách bảo hành như trên.",
-    "link": "https://vnexpress.net/gac-tung-uu-dai-ba-dong-xe-trong-thang-3-4863400.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "GAC Motor có những ưu đãi gì cho ba dòng xe trong tháng 3?",
-    "answers": [
-      {
-        "text": "Chương trình ưu đãi cho M6 Pro, M8 và GS8 với bảo hành 7 năm.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có ưu đãi cho dòng xe M6 Pro.",
-        "correct": false
-      },
-      {
-        "text": "Chương trình khuyến mãi chỉ áp dụng cho xe GS8.",
-        "correct": false
-      },
-      {
-        "text": "Không có thông tin nào về ưu đãi cho xe GAC.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
     "positivity": 6,
-    "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "importance": 8,
+    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
     "answers": [
       {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "text": "Khó thở và ho khan kéo dài",
         "correct": true
       },
       {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
+        "text": "Đau đầu và chóng mặt",
         "correct": false
       },
       {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "text": "Nôn mửa và tiêu chảy",
         "correct": false
       },
       {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
+        "text": "Mệt mỏi và sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng và khó tiêu",
         "correct": false
       }
     ]
@@ -2237,32 +2218,82 @@
     ]
   },
   {
-    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
-    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
+    "title": "6 mẹo giúp bỏ thuốc lá",
+    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
+    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
     "cat": "suc-khoe",
-    "positivity": 6,
+    "positivity": 9,
     "importance": 8,
-    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
     "answers": [
       {
-        "text": "Khó thở và ho khan kéo dài",
+        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
         "correct": true
       },
       {
-        "text": "Đau đầu và chóng mặt",
+        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
         "correct": false
       },
       {
-        "text": "Nôn mửa và tiêu chảy",
+        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
         "correct": false
       },
       {
-        "text": "Mệt mỏi và sốt cao",
+        "text": "Không cần phải có sự hỗ trợ từ người khác.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "answers": [
+      {
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "correct": true
+      },
+      {
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
         "correct": false
       },
       {
-        "text": "Đau bụng và khó tiêu",
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "correct": false
+      },
+      {
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "GAC tung ưu đãi ba dòng xe trong tháng 3",
+    "content": "GAC Motor Việt Nam vừa công bố chương trình ưu đãi cho ba dòng xe gồm M6 Pro, M8 và GS8 trong tháng 3. Khách hàng mua M6 Pro sẽ nhận 7 năm bảo hành, miễn phí dịch vụ cứu hộ 24/7 và thêm đồng hồ thông minh cho phiên bản 1.5T GL. M8 cũng có các ưu đãi tương tự, với quà tặng tiền mặt cho bản GL Master, trong khi GS8 được miễn lệ phí trước bạ và hưởng chính sách bảo hành như trên.",
+    "link": "https://vnexpress.net/gac-tung-uu-dai-ba-dong-xe-trong-thang-3-4863400.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "GAC Motor có những ưu đãi gì cho ba dòng xe trong tháng 3?",
+    "answers": [
+      {
+        "text": "Chương trình ưu đãi cho M6 Pro, M8 và GS8 với bảo hành 7 năm.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có ưu đãi cho dòng xe M6 Pro.",
+        "correct": false
+      },
+      {
+        "text": "Chương trình khuyến mãi chỉ áp dụng cho xe GS8.",
+        "correct": false
+      },
+      {
+        "text": "Không có thông tin nào về ưu đãi cho xe GAC.",
         "correct": false
       }
     ]
@@ -2612,33 +2643,6 @@
     ]
   },
   {
-    "title": "5 món ăn thường xuyên có thể phòng bệnh tim",
-    "content": "Bài viết đề cập đến 5 món ăn có thể giúp phòng ngừa bệnh tim, bao gồm dầu ôliu, chocolate đen, cà chua, hạt và tỏi. Dầu ôliu chứa chất béo không bão hòa đơn và polyphenol có tác dụng giảm viêm và cholesterol. Chocolate đen với hàm lượng ca cao cao có flavonoid giúp cải thiện lưu lượng máu và giảm huyết áp. Các loại hạt và cà chua cũng giàu chất dinh dưỡng hỗ trợ sức khỏe tim mạch. Tỏi với allicin có khả năng bảo vệ tim và ngăn ngừa cục máu đông.",
-    "link": "https://vnexpress.net/5-mon-an-thuong-xuyen-co-the-phong-benh-tim-4863283.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nào có thể giúp phòng ngừa bệnh tim?",
-    "answers": [
-      {
-        "text": "Dầu ôliu, chocolate đen, cà chua, hạt, tỏi",
-        "correct": true
-      },
-      {
-        "text": "Thịt đỏ, thực phẩm chiên, bánh ngọt, đồ uống có ga",
-        "correct": false
-      },
-      {
-        "text": "Cá hồi, rau xanh, sữa chua, nước trái cây",
-        "correct": false
-      },
-      {
-        "text": "Mì gói, snack, kem, đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "42 tuổi mới phát hiện có hai tử cung",
     "content": "Chị Hạnh, 42 tuổi, đã phát hiện mình có hai tử cung và hai âm đạo sau khi đi khám do chu kỳ kinh kéo dài 14 ngày. Tình trạng này khá hiếm gặp, chỉ chiếm 5% các dị tật tử cung và thường không được phát hiện nếu không có kiểm tra y tế. Sau khi phát hiện, bác sĩ đã phẫu thuật cắt bỏ một tử cung chứa khối u xơ lớn để cải thiện sức khỏe cho chị. Mặc dù có hai tử cung, chị Hạnh vẫn có khả năng mang thai và có kinh nguyệt bình thường.",
     "link": "https://vnexpress.net/42-tuoi-moi-phat-hien-co-hai-tu-cung-4862862.html",
@@ -2665,6 +2669,33 @@
       },
       {
         "text": "Có dấu hiệu mang thai",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn thường xuyên có thể phòng bệnh tim",
+    "content": "Bài viết đề cập đến 5 món ăn có thể giúp phòng ngừa bệnh tim, bao gồm dầu ôliu, chocolate đen, cà chua, hạt và tỏi. Dầu ôliu chứa chất béo không bão hòa đơn và polyphenol có tác dụng giảm viêm và cholesterol. Chocolate đen với hàm lượng ca cao cao có flavonoid giúp cải thiện lưu lượng máu và giảm huyết áp. Các loại hạt và cà chua cũng giàu chất dinh dưỡng hỗ trợ sức khỏe tim mạch. Tỏi với allicin có khả năng bảo vệ tim và ngăn ngừa cục máu đông.",
+    "link": "https://vnexpress.net/5-mon-an-thuong-xuyen-co-the-phong-benh-tim-4863283.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nào có thể giúp phòng ngừa bệnh tim?",
+    "answers": [
+      {
+        "text": "Dầu ôliu, chocolate đen, cà chua, hạt, tỏi",
+        "correct": true
+      },
+      {
+        "text": "Thịt đỏ, thực phẩm chiên, bánh ngọt, đồ uống có ga",
+        "correct": false
+      },
+      {
+        "text": "Cá hồi, rau xanh, sữa chua, nước trái cây",
+        "correct": false
+      },
+      {
+        "text": "Mì gói, snack, kem, đồ ăn nhanh",
         "correct": false
       }
     ]
@@ -5043,33 +5074,6 @@
     ]
   },
   {
-    "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
-    "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
-    "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Anh Tiến đã bị vô sinh do nguyên nhân gì?",
-    "answers": [
-      {
-        "text": "Biến chứng đái tháo đường",
-        "correct": true
-      },
-      {
-        "text": "Thiếu hoạt động thể chất",
-        "correct": false
-      },
-      {
-        "text": "Chế độ ăn uống kém",
-        "correct": false
-      },
-      {
-        "text": "Căng thẳng tâm lý",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nhiều nhân giáp gây nổi bướu vùng cổ người phụ nữ",
     "content": "Bài viết mô tả trường hợp của chị Hiền, 54 tuổi, ở TP.HCM, bị bướu giáp đa nhân sau khi phát hiện nổi u ở cổ. Qua chẩn đoán, bác sĩ xác định chị mắc ung thư biểu mô tuyến giáp thể nhú biến thể nang, tuy nhiên bệnh có tiên lượng tốt với tỷ lệ sống trên 5 năm hơn 98%. Sau ca phẫu thuật thành công, bệnh nhân hồi phục nhanh chóng và cần theo dõi định kỳ để phòng ngừa.",
     "link": "https://vnexpress.net/nhieu-nhan-giap-gay-noi-buou-vung-co-nguoi-phu-nu-4862920.html",
@@ -5097,28 +5101,28 @@
     ]
   },
   {
-    "title": "Tổng thống Zelensky lên tiếng về chiến dịch Kursk sau tối hậu thư đầu hàng",
-    "content": "Tổng thống Ukraine Volodymyr Zelensky khẳng định quân đội Ukraine sẽ tiếp tục chiến đấu ở tỉnh Kursk bất chấp cảnh báo từ Nga. Ông tuyên bố rằng Ukraine đang thực hiện nhiệm vụ của mình tại khu vực này và lực lượng của họ vẫn kiểm soát được tình hình. Mặc dù quân đội Nga đang cố gắng tiến vào một số khu vực, Zelensky cho biết lực lượng phòng thủ Ukraine đã chuẩn bị và sẽ duy trì vị trí của họ tại Kursk. Tuy nhiên, tình hình vẫn rất khó khăn và thách thức cho quân đội Ukraine.",
-    "link": "https://dantri.com.vn/the-gioi/tong-thong-zelensky-len-tieng-ve-chien-dich-kursk-sau-toi-hau-thu-dau-hang-20250319052836006.htm",
-    "cat": "the-gioi",
-    "positivity": 4,
+    "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
+    "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
+    "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
     "importance": 8,
-    "question": "Tổng thống Zelensky đã nói gì về tình hình quân đội Ukraine ở tỉnh Kursk?",
+    "question": "Anh Tiến đã bị vô sinh do nguyên nhân gì?",
     "answers": [
       {
-        "text": "Quân đội Ukraine sẽ tiếp tục chiến đấu ở tỉnh Kursk.",
+        "text": "Biến chứng đái tháo đường",
         "correct": true
       },
       {
-        "text": "Quân đội Ukraine đã đầu hàng Nga.",
+        "text": "Thiếu hoạt động thể chất",
         "correct": false
       },
       {
-        "text": "Tình hình ở Kursk đã hoàn toàn kiểm soát bởi Nga.",
+        "text": "Chế độ ăn uống kém",
         "correct": false
       },
       {
-        "text": "Quân đội Ukraine đã rút lui khỏi Kursk.",
+        "text": "Căng thẳng tâm lý",
         "correct": false
       }
     ]
