--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -529,6 +529,60 @@
     ]
   },
   {
+    "title": "Pháp phát sổ tay sinh tồn cho dân phòng xung đột vũ trang, sự cố hạt nhân",
+    "content": "Pháp sẽ phát hành một cuốn sổ tay sinh tồn dài 20 trang nhằm giúp người dân đối phó với các tình huống khẩn cấp như xung đột vũ trang, thiên tai, và sự cố hạt nhân. Tài liệu này bao gồm 63 biện pháp hướng dẫn cách bảo vệ bản thân và cộng đồng, cùng với khuyến nghị chuẩn bị một bộ dụng cụ sinh tồn. Chính phủ Pháp nhấn mạnh rằng việc phát hành sổ tay không liên quan đến căng thẳng hiện tại với Nga, mà là một phần trong chiến lược nâng cao khả năng ứng phó với khủng hoảng.",
+    "link": "https://dantri.com.vn/the-gioi/phap-phat-so-tay-sinh-ton-cho-dan-phong-xung-dot-vu-trang-su-co-hat-nhan-20250320072743231.htm",
+    "cat": "phap-luat",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao Pháp phát hành sổ tay sinh tồn cho người dân?",
+    "answers": [
+      {
+        "text": "Để giúp người dân đối phó với xung đột vũ trang và các tình huống khẩn cấp khác.",
+        "correct": true
+      },
+      {
+        "text": "Để chuẩn bị cho một cuộc chiến tranh với Nga.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng cường sức mạnh quân sự cho Pháp.",
+        "correct": false
+      },
+      {
+        "text": "Để giáo dục người dân về lịch sử chiến tranh.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mỹ nối lại viện trợ quân sự cho Ukraine bất chấp cảnh báo của Nga",
+    "content": "Mỹ đã nối lại viện trợ quân sự cho Ukraine và chia sẻ thông tin tình báo, theo xác nhận từ các quan chức Lầu Năm Góc. Quyết định này được đưa ra sau khi Ukraine tuyên bố đồng ý ngừng bắn trong 30 ngày với Nga. Trước đó, viện trợ đã bị tạm dừng do cuộc tranh cãi giữa Tổng thống Donald Trump và Tổng thống Ukraine Volodymyr Zelensky. Nga đã cảnh báo rằng viện trợ quân sự của Mỹ sẽ không thay đổi tình hình xung đột mà chỉ làm kéo dài nó.",
+    "link": "https://dantri.com.vn/the-gioi/my-noi-lai-vien-tro-quan-su-cho-ukraine-bat-chap-canh-bao-cua-nga-20250320071105730.htm",
+    "cat": "the-gioi",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Mỹ đã làm gì liên quan đến viện trợ quân sự cho Ukraine?",
+    "answers": [
+      {
+        "text": "Mỹ đã nối lại viện trợ quân sự cho Ukraine.",
+        "correct": true
+      },
+      {
+        "text": "Mỹ đã ngừng viện trợ quân sự cho Ukraine.",
+        "correct": false
+      },
+      {
+        "text": "Mỹ đã giảm viện trợ quân sự cho Ukraine.",
+        "correct": false
+      },
+      {
+        "text": "Mỹ đã tăng cường viện trợ quân sự cho Nga.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phụ cấp công vụ 25% của công chức được tính ra sao?",
     "content": "Khoản phụ cấp công vụ 25% của công chức sẽ được tính trong \"mức lương hiện hưởng\" theo quy định tại Nghị định 178/2024. Theo luật sư Nguyễn Hồng Linh, mức lương hiện hưởng bao gồm tiền lương theo ngạch, bậc và các khoản phụ cấp, trong đó có phụ cấp công vụ. Vì vậy, phụ cấp công vụ 25% sẽ được cộng vào mức lương này.",
     "link": "https://tuoitre.vn/phu-cap-cong-vu-25-cua-cong-chuc-duoc-tinh-ra-sao-20250313135953325.htm",
@@ -551,6 +605,33 @@
       },
       {
         "text": "Phụ cấp công vụ 25% sẽ không được tính nếu công chức nghỉ việc.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hãng xe Trung Quốc phát trực tiếp thử nghiệm va chạm",
+    "content": "Hãng xe Trung Quốc Lynk & Co đã phát trực tiếp thử nghiệm va chạm chiếc SUV hybrid Lynk & Co 900, nhằm đánh giá mức độ an toàn của hàng ghế thứ ba. Trong bài kiểm tra, xe phải chịu tác động ở tốc độ 100 km/h, vượt xa tiêu chuẩn C-NCAP. Kết quả cho thấy cấu trúc xe vẫn giữ nguyên và đủ không gian sống sót cho hành khách. Đây là một động thái nhằm nâng cao nhận thức về an toàn cho những hành khách ngồi ở hàng ghế thứ ba, nơi có tỷ lệ thương tích cao trong các vụ va chạm.",
+    "link": "https://vnexpress.net/hang-xe-trung-quoc-phat-truc-tiep-thu-nghiem-va-cham-4863218.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Lynk & Co 900 đã trải qua bài kiểm tra an toàn gì?",
+    "answers": [
+      {
+        "text": "Thử nghiệm va chạm",
+        "correct": true
+      },
+      {
+        "text": "Thử nghiệm phanh",
+        "correct": false
+      },
+      {
+        "text": "Thử nghiệm tiêu hao nhiên liệu",
+        "correct": false
+      },
+      {
+        "text": "Thử nghiệm khí thải",
         "correct": false
       }
     ]
@@ -582,33 +663,6 @@
       },
       {
         "text": "Nhà báo",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hãng xe Trung Quốc phát trực tiếp thử nghiệm va chạm",
-    "content": "Hãng xe Trung Quốc Lynk & Co đã phát trực tiếp thử nghiệm va chạm chiếc SUV hybrid Lynk & Co 900, nhằm đánh giá mức độ an toàn của hàng ghế thứ ba. Trong bài kiểm tra, xe phải chịu tác động ở tốc độ 100 km/h, vượt xa tiêu chuẩn C-NCAP. Kết quả cho thấy cấu trúc xe vẫn giữ nguyên và đủ không gian sống sót cho hành khách. Đây là một động thái nhằm nâng cao nhận thức về an toàn cho những hành khách ngồi ở hàng ghế thứ ba, nơi có tỷ lệ thương tích cao trong các vụ va chạm.",
-    "link": "https://vnexpress.net/hang-xe-trung-quoc-phat-truc-tiep-thu-nghiem-va-cham-4863218.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Lynk & Co 900 đã trải qua bài kiểm tra an toàn gì?",
-    "answers": [
-      {
-        "text": "Thử nghiệm va chạm",
-        "correct": true
-      },
-      {
-        "text": "Thử nghiệm phanh",
-        "correct": false
-      },
-      {
-        "text": "Thử nghiệm tiêu hao nhiên liệu",
-        "correct": false
-      },
-      {
-        "text": "Thử nghiệm khí thải",
         "correct": false
       }
     ]
@@ -2214,32 +2268,28 @@
     ]
   },
   {
-    "title": "5 đồ uống góp phần tăng cường sinh lý nữ",
-    "content": "Bài viết giới thiệu 5 loại đồ uống có lợi giúp tăng cường sinh lý nữ, bao gồm trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ và nước ép lựu. Những đồ uống này chứa nhiều chất chống oxy hóa và vitamin, hỗ trợ cải thiện sức khỏe sinh lý và ổn định nội tiết tố. Bên cạnh việc sử dụng các loại đồ uống này, lối sống lành mạnh như tập thể dục và chế độ ăn uống cân bằng cũng rất quan trọng để nâng cao sức khỏe tổng thể của phụ nữ.",
-    "link": "https://vnexpress.net/5-do-uong-gop-phan-tang-cuong-sinh-ly-nu-4863206.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
     "importance": 7,
-    "question": "Những loại đồ uống nào có thể giúp tăng cường sinh lý nữ?",
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
     "answers": [
       {
-        "text": "Trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ, nước ép lựu",
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
         "correct": true
       },
       {
-        "text": "Nước ngọt có ga",
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
         "correct": false
       },
       {
-        "text": "Trà sữa",
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
         "correct": false
       },
       {
-        "text": "Sữa đặc có đường",
-        "correct": false
-      },
-      {
-        "text": "Nước lọc",
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
@@ -2299,6 +2349,37 @@
     ]
   },
   {
+    "title": "5 đồ uống góp phần tăng cường sinh lý nữ",
+    "content": "Bài viết giới thiệu 5 loại đồ uống có lợi giúp tăng cường sinh lý nữ, bao gồm trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ và nước ép lựu. Những đồ uống này chứa nhiều chất chống oxy hóa và vitamin, hỗ trợ cải thiện sức khỏe sinh lý và ổn định nội tiết tố. Bên cạnh việc sử dụng các loại đồ uống này, lối sống lành mạnh như tập thể dục và chế độ ăn uống cân bằng cũng rất quan trọng để nâng cao sức khỏe tổng thể của phụ nữ.",
+    "link": "https://vnexpress.net/5-do-uong-gop-phan-tang-cuong-sinh-ly-nu-4863206.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại đồ uống nào có thể giúp tăng cường sinh lý nữ?",
+    "answers": [
+      {
+        "text": "Trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ, nước ép lựu",
+        "correct": true
+      },
+      {
+        "text": "Nước ngọt có ga",
+        "correct": false
+      },
+      {
+        "text": "Trà sữa",
+        "correct": false
+      },
+      {
+        "text": "Sữa đặc có đường",
+        "correct": false
+      },
+      {
+        "text": "Nước lọc",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dấu hiệu nhận biết bệnh xơ phổi",
     "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
     "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
@@ -2352,33 +2433,6 @@
       },
       {
         "text": "Không cần kiểm tra sức khỏe định kỳ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
-    "answers": [
-      {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
-        "correct": true
-      },
-      {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
-        "correct": false
-      },
-      {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
-        "correct": false
-      },
-      {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
@@ -3745,33 +3799,6 @@
     ]
   },
   {
-    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
-    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
-    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
-    "answers": [
-      {
-        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
-        "correct": true
-      },
-      {
-        "text": "Không, đau lưng chỉ do xương khớp.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng không liên quan đến thần kinh.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng chỉ là vấn đề tạm thời.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
     "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
     "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
@@ -3794,6 +3821,33 @@
       },
       {
         "text": "Để mở rộng thị trường sang châu Á.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
+    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
+    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
+    "answers": [
+      {
+        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
+        "correct": true
+      },
+      {
+        "text": "Không, đau lưng chỉ do xương khớp.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng không liên quan đến thần kinh.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng chỉ là vấn đề tạm thời.",
         "correct": false
       }
     ]
@@ -4957,64 +5011,6 @@
       },
       {
         "text": "Giá heo hơi thay đổi theo từng ngày",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nagelsmann nhắc lại mục tiêu vô địch World Cup 2026",
-    "content": "HLV Julian Nagelsmann của đội tuyển Đức nhấn mạnh mục tiêu giành chức vô địch World Cup 2026, sau thất bại tại Euro 2024. Trong buổi họp báo, ông bày tỏ sự tức giận về một tình huống gây tranh cãi trong trận thua Tây Ban Nha ở tứ kết Euro và khuyến khích cầu thủ hướng tới những mục tiêu lớn. Ngoài ra, Nagelsmann cũng hướng tới việc giành chức vô địch Nations League trên sân nhà trước khi tham dự World Cup.",
-    "link": "https://vnexpress.net/nagelsmann-nhac-lai-muc-tieu-vo-dich-world-cup-2026-4863036.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Nagelsmann có mục tiêu gì cho tuyển Đức trong World Cup 2026?",
-    "answers": [
-      {
-        "text": "Vô địch World Cup 2026",
-        "correct": true
-      },
-      {
-        "text": "Về nhì tại Euro 2024",
-        "correct": false
-      },
-      {
-        "text": "Giành vé dự World Cup 2026",
-        "correct": false
-      },
-      {
-        "text": "Thắng Nations League",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tham gia vòng loại World Cup 2026",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vỡ đôi tinh hoàn vì con trai dùng đồ chơi đập trúng",
-    "content": "Một người đàn ông 51 tuổi ở TP HCM đã bị vỡ tinh hoàn sau khi con trai 8 tuổi dùng đồ chơi bằng gỗ đập vào bìu bên trái trong khi ông đang ngủ. Sau khi nhập viện với triệu chứng sưng đau, bác sĩ đã xác định tình trạng vỡ tinh hoàn và tiến hành phẫu thuật khắc phục. Bệnh nhân đã hồi phục hoàn toàn sau 5 ngày điều trị. Vỡ tinh hoàn là một cấp cứu nam khoa hiếm gặp nhưng có thể gây ra biến chứng nghiêm trọng nếu không được điều trị kịp thời.",
-    "link": "https://vnexpress.net/vo-doi-tinh-hoan-vi-con-trai-dung-do-choi-dap-trung-4863045.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Nguyên nhân nào khiến người đàn ông 51 tuổi bị vỡ tinh hoàn?",
-    "answers": [
-      {
-        "text": "Con trai dùng đồ chơi đập vào bìu",
-        "correct": true
-      },
-      {
-        "text": "Ông bị tai nạn giao thông",
-        "correct": false
-      },
-      {
-        "text": "Ông tham gia thể thao không an toàn",
-        "correct": false
-      },
-      {
-        "text": "Ông bị ngã trong nhà",
         "correct": false
       }
     ]
